cross-the-road/src/App.css
.App {
  text-align: center;
  background-color: rgb(81, 138, 217);
  height: 100vh;
  display: flex;
  justify-content: center;
  align-items: center;
}
.background-container {
  background-repeat: no-repeat;
  background-position: center;
  background-size: contain;
}
.game-container {
  height: 90vw;
  width: 70vh;
  transform: rotate(90deg);
  position: relative;
  overflow: hidden;
}
.car-container {
  width: 30%;
  height: 30%;
  transform: rotate(-90deg);
  position: absolute;
}
.character {
  width: 40px;
  height: 40px;
  border-radius: 50%;
  position: absolute;
}

.controller {
  position: fixed;
  bottom: 5px;
  right: 20px;
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  width: 300px;
  height: 100px;
}

.front {
  grid-column: 1/4;
}

.controller button {
  width: 100%;
  height: 100%;
}

.front button {
  width: 35%;
  margin: auto;
}

